<resources>
    <string name="app_name">Formato de Requisición Digital</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- URL -->
    <string name="url_qa">http://workflowbf.azurewebsites.net/workflow/qa_v1/index.php/</string>
    <string name="url_prod">http://workflowmgr.azurewebsites.net/workflow/wsprod_v1/index.php/</string>
<!--<string name="url_prod">http://workflowbf.azurewebsites.net/workflow/wsprod_v1/index.php/</string> -->
    <!-- Generic Text-->
    <string name="accept">Aceptar</string>
    <string name="reject">Rechazar</string>
    <string name="sent">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="reason">Comentarios</string>
    <string name="dialog_error_memory_low">La aplicación se está quedando sin memoria, por favor cierra las demás aplicaciones para un correcto funcionamiento</string>
    <string name="network_error">No hay conexión a internet</string>
    <string name="not_results">Sin resultados</string>
    <string name="empty_list">No hay requisiciones</string>
    <string name="form_pick_files">Selecciona el archivo</string>
    <string name="total_budges">$ %s MXN</string>
    <string name="validate_field">%s es requerido</string>
    <string name="involved_name"
        formatted="false">\u2022 %s</string>
    <string name="close_sesion">Cerrar Sesión</string>
    <string name="text_version_complete">Version:  %s</string>
    <!-- Splash Activity-->
    <string name="content_description">BioFields</string>
    <string name="text_version">V %s</string>


    <!-- Login Acitivity -->
    <string name="act_login_edt_user">Usuario</string>
    <string name="act_login_edt_password">Contraseña</string>
    <string name="act_login_btn_login">Ingresar</string>
    <string name="act_login_btn_recovery_pwd">Recuperar su contraseña</string>

    <!-- Recovery Password Activity-->
    <string name="act_recovery_title">Recuperar Contraseña</string>
    <string name="act_recovery_email">Correo Electrónico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Form Requisition Activity -->
    <string name="act_form_comments">Justificación</string>
    <string name="act_form_description">Descripción del requerimiento</string>
    <string name="act_form_info_item">Llenese sólo si conoce la información</string>
    <string name="act_form_poa">A) ¿Esta dentro del Programa de Presupuesto?</string>
    <string name="act_form_includerepleace">B) ¿Puede incluirse / reemplazar otra partida?</string>
    <string name="act_form_delete">C) ¿Se puede eliminar otra partida?</string>
    <string name="act_form_indespensable">D) ¿Es indispensable para la operación?</string>
    <string name="act_form_billed">¿El proveedor ya le ha entregado factura?</string>
    <string name="act_form_wednesday">¿Pago urgente (Próximo Miércoles)?</string>

    <!-- Form Partidas(Budge) Activity -->
    <string name="act_budge_notes">Descripción general</string>
    <string name="act_budge_service_product">Producto / Servicio</string>
    <string name="act_budge_description">Categoría de gasto</string>
    <string name="act_budge_uom">Unidad de medida</string>
    <string name="act_budge_price">Precio unitario</string>
    <string name="act_budge_qty">Cantidad</string>
    <string name="act_budge_total">Total $%s MXN</string>


</resources>
