<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description"
        android:scaleType="centerCrop"
        android:src="@android:drawable/picture_frame"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/act_login_edt_user"
        android:textColor="@color/colorWhite"/>

    <android.support.v7.widget.CardView
        android:id="@+id/act_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/act_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/content_description"
                android:scaleType="fitCenter"
                android:src="@mipmap/ico_logo"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/act_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/act_login_edt_user"
                    android:inputType="textNoSuggestions"
                    android:maxLength="15"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/act_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/act_login_edt_password"
                    android:inputType="textPassword"
                    app:passwordToggleEnabled="false"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/act_login_enter"
                android:text="@string/act_login_btn_login"
                style="@style/BlueButton"
                app:backgroundTint="@color/colorAccent"
                app:targetApi="lollipop"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <Button
        android:id="@+id/act_login_recovery"
        android:text="@string/act_login_btn_recovery_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:backgroundTint="@color/colorAccent"
        app:targetApi="lollipop"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"/>
</RelativeLayout>